
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Updated to xPDO 2.0 revision 405
- [#MODX-1614] Fixed issue with cached pages going to unauthorized_page instead of error_page when user does not have load permission 
- [#MODX-411] Set system setting: emailsender to the admin email address during install
- [#MODX-1556] Show class and id for deleted resources or elements in Manager Action Log
- [#MODX-1552] Create New element Here shows for root elements but not those in categories
- [#MODX-1625] Fixed bugs with menu tree preventing creating child nodes of new items, restyled menu and action icons
- Added preventative to make sure packages are only downloaded once when in Package Browser
- [#MODX-1623] Fixed package installation error: attempting to preserve files fails with error message
- Updated to xPDO 2.0 revision 404
- Setup upgrades no longer preserve existing data/files on install
- Fixed issue with setup trying to write connector files regardless if files are already in place
- Updated to xPDO 2.0 revision 403
- Fixed bug where plugin properties were not being injected into the plugin event call
- [#MODX-1617] Fixed bug with tvDefaultValue Form Customization Rule
- [#MODX-1619] Added sanity check for modActionDom constraint check
- [#MODX-1620] Fixed missing or incorrect lexicon entries across ui
- [#MODX-1612] Fixed bug where Create Menu button was not working
- [#MODX-1616] Renamed "field" to "name" in Form Customization rule windows
- Removed any non-essential JS from the top menu items
- Added additional check and error logging for processor_path option in modX::executeProcessor().
- Added missing view_sysinfo permission to default Administrator policy